additional fix to navbar on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -631,6 +631,7 @@ li {
     width: 100px;
     height: 100px;
     border-radius: 100px;
+    margin-top: 100px;
   }
 
   .text_description_1 {
@@ -655,7 +656,7 @@ li {
     display: flex;
     flex-direction: column;    
     width: 100%;
-    height: 600px;
+    height: 550px;
     background: #fefefe;
     background: #0e0d0d;
     box-shadow: 0 10px 100px rgba(0, 0, 0, 0.1); 
